<resources>
    <string name="app_name">FoodoFest</string>
    <string name="foodofest">FoodoFest</string>
    <string name="good_food_within_minutes">Good Food Within Minutes</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_a_account">Don\'t have a account?</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Registration</string>
    <string name="logout">Logout</string>
    <string name="nikitanage10_gmail_com">nikitanage10@gmail.com</string>
    <string name="profile">Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="orders_history">Orders History</string>
    <string name="logged_out">LOGGED OUT</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="my_orders_fragment">My Orders Fragment</string>


</resources>