<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/background"
             android:alpha="0.7"
             tools:context=".LoginFragment">


    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textSize="30sp"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textColor="#FF0000"
            android:layout_marginLeft="150dp"/>

    <EditText
            android:id="@+id/log_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_marginTop="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

    <EditText
            android:id="@+id/log_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginTop="250dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

    <Button
            android:id="@+id/btn_login"
            android:layout_width="162dp"
            android:layout_height="65dp"
            android:text="@string/login"
            android:backgroundTint="#FFA500"
            android:textSize="20sp"
            android:layout_marginTop="350dp"
            android:layout_marginLeft="130dp"/>

    <TextView
            android:id="@+id/dont_have_a_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_a_account"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="420dp"
            android:layout_marginLeft="60dp"/>

    <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#0000FF"
            android:textSize="20sp"
            android:layout_marginTop="420dp"
            android:layout_marginLeft="260dp"/>


    <TextView
            android:id="@+id/tv_forgot_pswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="600dp"
            android:layout_marginLeft="140dp"/>


</FrameLayout>